--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +6,7 @@
 }
 
 body {
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Roboto', sans-serif;
   background-color: black;
   color: white;
   overflow-x: hidden;
@@ -22,7 +21,7 @@ header {
   border-bottom: 3px solid white;
 }
 
-#header {
+.wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -38,7 +37,7 @@ header {
   padding: 0 20px;
 }
 
-#header h2 {
+.wrapper h2 {
   font-size: 2rem;
 }
 
@@ -118,7 +117,7 @@ input:focus {
   .img {
     width: 100%;
   }
-  #header {
+  .wrapper {
     margin: 10px 0;
     padding: 20px;
     gap: 10px;
@@ -126,13 +125,13 @@ input:focus {
         -ms-flex-pack: center;
             justify-content: center;
   }
-  #header h2 {
+  .wrapper h2 {
     padding: 5px 0;
   }
 }
 
 @media (max-width: 480px) {
-  #header h2 {
+  .wrapper h2 {
     text-align: center;
     font-size: 1.5rem;
   }
@@ -141,7 +140,7 @@ input:focus {
     margin: auto;
   }
   #search_box input {
-    font-size: .7rem;
+    font-size: 1rem;
   }
 }
 
