--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,3 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
-
 *{
   margin: 0;
   padding: 0;
@@ -8,7 +5,7 @@
 }
 
 body{  
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Roboto', sans-serif;  
   background-color: black;
   color: white;
   overflow-x: hidden;
@@ -19,9 +16,12 @@ body{
   margin: auto;
 }
 
-header{border-bottom: 3px solid white;}
+header{
+  border-bottom: 3px solid white;
+}
 
-#header{
+
+.wrapper{
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,7 +30,10 @@ header{border-bottom: 3px solid white;}
   padding: 0 20px;
 }
 
-#header h2{font-size: 2rem;}
+
+.wrapper h2{
+  font-size: 2rem;
+}
 
 #search_box{
   position: relative;
@@ -66,7 +69,9 @@ input:focus{
   transition: 1s;
 }
 
-#search_box i:hover{color: white;}
+#search_box i:hover{
+  color: white;
+}
 
 #grid{
   width: 100%;
@@ -83,30 +88,37 @@ input:focus{
   background-position: center;
   background-size: cover;
   border-radius: 2px;
-  cursor: pointer;
+cursor: pointer;
 }
 
-@media(max-width:1280px){
- .container{width: 100%;}
+@media(max-width:1280px){  
+  .container{width: 100%;
+  }
 }
 
 @media(max-width:768px){
-  #main{width: 95%;}
+  #main{
+    width: 95%;
+  }
 
-  .img{width: 100%;}
+  .img{
+    width: 100%;
+  }
 
-  #header{
+  .wrapper{
     margin: 10px 0;
     padding: 20px;
     gap: 10px;
     justify-content: center;
   }
 
-  #header h2{padding: 5px 0;}
+  .wrapper h2{
+    padding: 5px 0;
+  }
 }
 
 @media(max-width:480px){
-  #header h2{
+  .wrapper h2{
     text-align: center;
     font-size: 1.5rem;
   }
@@ -115,22 +127,22 @@ input:focus{
     width: 80%;
     margin: auto;
   }
-  #search_box input{font-size: .7rem;}
+  #search_box input{
+    font-size: 1rem;
+  }
 }
 
 #footer{
   border-top: 3px solid white;
   background-color: #000;
-  padding: 20px 0
-  ;
+  padding: 20px 0  ;
   position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     z-index: 2;
 
-  .container{    
-
+  .container{ 
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -143,24 +155,16 @@ input:focus{
       background-image: url('../img/logo.svg');
       background-size: contain;
       background-repeat: no-repeat;  
-      transition: 0.3s;
-    
+      transition: 0.3s;    
       .logo:hover {
         filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
           contrast(87%);
       }
-    }
-
-    // .logo{
-    //   width: 150px;      
-    //   display: inline-block;
-    //   fill: white;
-    
+    }   
     .link{
       color: white;
       text-decoration: none;
       font-size: 1.5rem
     }
-
   }
 }
